# sonic-buildimage

./: Makefile  Makefile.cache  azure-pipelines.yml  build_debian.sh  get_docker-base.sh  slave.mk
.azure-pipelines/: azure-pipelines-build-alpinevs.yml
.azure-pipelines/baseline_test/: baseline.test.buildimage.yml
dockers/docker-auditd/: config_checker.py  generate_rules_checksums.py
dockers/docker-base-bookworm/: Dockerfile.j2
dockers/docker-base-trixie/: Dockerfile.j2
dockers/docker-gcu/: Dockerfile.j2  docker-init.sh  feature.json  supervisord.conf
dockers/docker-gcu-watchdog/: .gitignore  Dockerfile.j2  feature.json  supervisord.conf
dockers/docker-orchagent/: orch_zmq_tables.conf.j2  orchagent.sh  supervisord.conf.j2  swssconfig.sh
dockers/docker-ptf/: Dockerfile.j2
dockers/docker-restapi-sidecar/: Dockerfile.j2  critical_processes  supervisord.conf  systemd_stub.py
dockers/docker-sonic-gnmi/: Dockerfile.j2
dockers/docker-sonic-mgmt/: Dockerfile.j2
dockers/docker-sonic-otel/: Dockerfile.j2
files/dsc/: dpu.init  dpu.service
rules/: config  docker-gcu-watchdog.mk  docker-gcu.mk  docker-gnmi.mk  docker-restapi-sidecar.mk  functions  sonic-fips.mk  sonic-gcu.dep  sonic-gcu.mk  sonic-gcu.mk‎  sonic-utilities-data.mk
scripts/: build_debian_base_system.sh  build_mirror_config.sh  generate_buildinfo_config.sh  process_log.sh
sonic-slave-bookworm/: Dockerfile.j2
sonic-slave-trixie/: Dockerfile.j2
src/gcu-watchdog/: Cargo.toml  Makefile  build.rs  rust-toolchain.toml
src/gcu-watchdog/proto/: watchdog.proto
src/gcu-watchdog/src/: main.rs
(+294 files in other folders)
